--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="blue_700">#145C9C</color>
     <color name="gray_300">#ADADC8</color>
     <color name="gray_900">#16191E</color>
+    <color name="clay">#f2e5c4</color>
+    <color name="dark_clay">#85785F</color>
+
 </resources>
